; ModuleID = '/home/carl/AnghaBench/mimikatz/mimikatz/modules/sekurlsa/extr_kuhl_m_sekurlsa_utils.c_kuhl_m_sekurlsa_utils_pFromAVLByLuidRec.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimikatz/modules/sekurlsa/extr_kuhl_m_sekurlsa_utils.c_kuhl_m_sekurlsa_utils_pFromAVLByLuidRec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32* }
%struct.TYPE_9__ = type { %struct.TYPE_8__, i32* }
%struct.TYPE_8__ = type { i32*, i32* }
%struct.TYPE_11__ = type { i64, i32*, %struct.TYPE_9__* }

@KULL_M_MEMORY_GLOBAL_OWN_HANDLE = common dso_local global i32 0, align 4
@LPTR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @kuhl_m_sekurlsa_utils_pFromAVLByLuidRec(%struct.TYPE_10__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_10__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_9__, align 8
  %9 = alloca %struct.TYPE_11__, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  store i32* null, i32** %7, align 8
  %10 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %9, i32 0, i32 0
  %11 = ptrtoint %struct.TYPE_9__* %8 to i64
  store i64 %11, i64* %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %9, i32 0, i32 1
  store i32* @KULL_M_MEMORY_GLOBAL_OWN_HANDLE, i32** %12, align 8
  %13 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %9, i32 0, i32 2
  store %struct.TYPE_9__* null, %struct.TYPE_9__** %13, align 8
  %14 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %15 = call i64 @kull_m_memory_copy(%struct.TYPE_11__* %9, %struct.TYPE_10__* %14, i32 24)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %90

17:                                               ; preds = %3
  %18 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %8, i32 0, i32 1
  %19 = load i32*, i32** %18, align 8
  %20 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %21 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %20, i32 0, i32 0
  store i32* %19, i32** %21, align 8
  %22 = icmp ne i32* %19, null
  br i1 %22, label %23, label %59

23:                                               ; preds = %17
  %24 = load i32, i32* @LPTR, align 4
  %25 = load i32, i32* %5, align 4
  %26 = sext i32 %25 to i64
  %27 = add i64 %26, 4
  %28 = trunc i64 %27 to i32
  %29 = call i64 @LocalAlloc(i32 %24, i32 %28)
  %30 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %9, i32 0, i32 0
  store i64 %29, i64* %30, align 8
  %31 = icmp ne i64 %29, 0
  br i1 %31, label %32, label %58

32:                                               ; preds = %23
  %33 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %34 = load i32, i32* %5, align 4
  %35 = sext i32 %34 to i64
  %36 = add i64 %35, 4
  %37 = trunc i64 %36 to i32
  %38 = call i64 @kull_m_memory_copy(%struct.TYPE_11__* %9, %struct.TYPE_10__* %33, i32 %37)
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %54

40:                                               ; preds = %32
  %41 = load i32, i32* %6, align 4
  %42 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %9, i32 0, i32 0
  %43 = load i64, i64* %42, align 8
  %44 = load i32, i32* %5, align 4
  %45 = sext i32 %44 to i64
  %46 = add nsw i64 %43, %45
  %47 = trunc i64 %46 to i32
  %48 = call i64 @SecEqualLuid(i32 %41, i32 %47)
  %49 = icmp ne i64 %48, 0
  br i1 %49, label %50, label %53

50:                                               ; preds = %40
  %51 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %8, i32 0, i32 1
  %52 = load i32*, i32** %51, align 8
  store i32* %52, i32** %7, align 8
  br label %53

53:                                               ; preds = %50, %40
  br label %54

54:                                               ; preds = %53, %32
  %55 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %9, i32 0, i32 0
  %56 = load i64, i64* %55, align 8
  %57 = call i32 @LocalFree(i64 %56)
  br label %58

58:                                               ; preds = %54, %23
  br label %59

59:                                               ; preds = %58, %17
  %60 = load i32*, i32** %7, align 8
  %61 = icmp ne i32* %60, null
  br i1 %61, label %74, label %62

62:                                               ; preds = %59
  %63 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %8, i32 0, i32 0
  %64 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %63, i32 0, i32 1
  %65 = load i32*, i32** %64, align 8
  %66 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %67 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %66, i32 0, i32 0
  store i32* %65, i32** %67, align 8
  %68 = icmp ne i32* %65, null
  br i1 %68, label %69, label %74

69:                                               ; preds = %62
  %70 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %71 = load i32, i32* %5, align 4
  %72 = load i32, i32* %6, align 4
  %73 = call i32* @kuhl_m_sekurlsa_utils_pFromAVLByLuidRec(%struct.TYPE_10__* %70, i32 %71, i32 %72)
  store i32* %73, i32** %7, align 8
  br label %74

74:                                               ; preds = %69, %62, %59
  %75 = load i32*, i32** %7, align 8
  %76 = icmp ne i32* %75, null
  br i1 %76, label %89, label %77

77:                                               ; preds = %74
  %78 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %8, i32 0, i32 0
  %79 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %78, i32 0, i32 0
  %80 = load i32*, i32** %79, align 8
  %81 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %82 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %81, i32 0, i32 0
  store i32* %80, i32** %82, align 8
  %83 = icmp ne i32* %80, null
  br i1 %83, label %84, label %89

84:                                               ; preds = %77
  %85 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %86 = load i32, i32* %5, align 4
  %87 = load i32, i32* %6, align 4
  %88 = call i32* @kuhl_m_sekurlsa_utils_pFromAVLByLuidRec(%struct.TYPE_10__* %85, i32 %86, i32 %87)
  store i32* %88, i32** %7, align 8
  br label %89

89:                                               ; preds = %84, %77, %74
  br label %90

90:                                               ; preds = %89, %3
  %91 = load i32*, i32** %7, align 8
  ret i32* %91
}

declare dso_local i64 @kull_m_memory_copy(%struct.TYPE_11__*, %struct.TYPE_10__*, i32) #1

declare dso_local i64 @LocalAlloc(i32, i32) #1

declare dso_local i64 @SecEqualLuid(i32, i32) #1

declare dso_local i32 @LocalFree(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
